--- a/Farfalle Dive Planner/style.css
+++ b/Farfalle Dive Planner/style.css
@@ -27,7 +27,7 @@ height: 520px? because:
 width:1000px/ because: (for now)
        width container - width of drag-me = 900/10  is the maximum time in minutes(for now).
 */
-#container {
+.container {
    	width: 1000px;
     height: 520px;			
     background-image: url("background.png");
