added/modified some graphics

--- a/Farfalle Dive Planner/style.css
+++ b/Farfalle Dive Planner/style.css
@@ -7,14 +7,15 @@ of dive
 */
 
 .dive {
-  width: 100px;
-  height:100px;
-  background-color:#339933; 
+  width: 80px;
+  height:80px;
 
-  background-image: url("animated-diver-2.gif");
+  background-image: url("diver.png");
   position: absolute;
   color: white;
   border-radius: 10em;
+  border-style: solid;
+  border-width: 9px;
   z-index: 1;
 
   -webkit-transform: translate(0px, 0px);
@@ -23,7 +24,7 @@ of dive
 
 
 #time_depth{
-  width: 110px;
+  width: 170px;
   height: 80px;
   top: 10px;
   background-color: black;
@@ -34,7 +35,7 @@ of dive
   -moz-border-radius:    10px;
    -webkit-border-radius: 10px;
    border-radius:         10px;
-   text-align: center;
+   text-align: left;
    font-size: 120%;
    font-weight: bolder;
    display: inline-block;
@@ -57,21 +58,22 @@ of dive
 .container {
     width: 1000px;
     height: 520px;  
-    
     float: left; 
     overflow: visible;
     top: 100px;
+    background-color: transparent;
+	  
   }
 
 #main {
-  width: 1000px;
-  position: relative;
-  margin-top:100px;
+  width: 99%;
+  height: 80%;
+  position: absolute;
+  margin-top:-20px;
   overflow: visible;
-  background-color: #336699;
-  padding-left: 150px;
-  
-  top:100px;
+ 
+  top: 145px;
+  background-image: url("background.png");
 }
 
 .SI {
@@ -79,16 +81,22 @@ of dive
   width: 500px;  
   height: 520px;
   position:relative;
-  top: -50px;
+
+  background-image: url("background.png")
 }
 
 #confirm {
-  position: inherit;
+  position: absolute;
+  width: 70px;
+  height: 26px;
+  left: 51%;
 }
 
 .surface_interval {
   width: 50px;
-  float: center;
+  height: 20px;
+  position: absolute;
+  left:40%;
 }
 h2 {
 text-decoration:underline;
@@ -105,18 +113,29 @@ h2:hover {
 
 #add {
   position: fixed;
-  margin-left: 1500px;
-  margin-top: -90px;
-  height:50px;
-  width:50px;
+  width:100px;
+  top: 5px;
 }
 
 #delete {
    position: fixed;
-   margin-left: 1500px;
-   margin-top: -40px;
-   height:50px;
-   width:50px;
+   width:100px;
+   left: 100px;
+   top: 5px;
+}
+
+#load {
+  position: fixed;
+  width:100px;
+  left: 200px;
+  top: 5px;
+}
+
+#setdive {
+  position: fixed;
+  width:100px;
+  left: 300px;
+  top: 5px;
 }
 
 .depth_time_txt:before {
@@ -129,22 +148,23 @@ h2:hover {
 
 .boat1 {
   position: absolute;
-  top: -90px;
-  width: 100px;
-  height: 100px;
-  z-index: 1;
-  background-color: black;
+  top: -40px;
+  width: 157px;
+  height: 60px;
+  z-index: 2;
+  background-color: transparent;
+  background-image: url("boat.png");
 }
 
 .boat2 {
   position: absolute;
-  top: -80px;
-  width: 100px;
-  height: 100px;
-  z-index: 1;
+  top: -30px;
+  width: 157px;
+  height: 60px;
+  z-index: 2;
   left: 250px;
-  background-color: black;
-  left: 50px;
+  background-color: transparent;
+  background-image: url("boat.png");
 }
 
 
@@ -159,6 +179,7 @@ h2:hover {
   border-radius: 10px;
   top:-20px;
   margin-left: 50px;
+  z-index: 1;
 }
 
 .line2 {
@@ -172,10 +193,11 @@ h2:hover {
   border-top-color: transparent;
   border-left-color: transparent;
   border-bottom-color: transparent;
+  z-index: 1;
 }
 
 .decomp_stop {
-  width: 50px;
+  width: 80px;
   height: 70px;
   position: absolute;
   background-color: transparent;
@@ -185,7 +207,28 @@ h2:hover {
   border-top-color: transparent;
   border-left-color: transparent;
   top: -10px;
+  z-index: 1;
 }
 
 body{
-background-image: url("background.png");}
+}
+
+#sky {
+  background-image: url("sky.png");
+  width: 99%;
+  height: 180px;
+  position: absolute;
+  top: 0px;
+  z-index: -1;
+}
+
+#warning {
+  font-family: Arial, Helvetica, sans-serif; 
+  text-align: right;
+  width: 390px;
+  font-size: 19pt;
+  position: fixed;
+  right: 50px;
+  top: 0px;
+  color: #FF6600;
+ }
