--- a/Farfalle Dive Planner/style.css
+++ b/Farfalle Dive Planner/style.css
@@ -204,6 +204,7 @@ text-align:center;
   background-image: url("sky.png");
   width: 100%;
   height: 180px;
+  left: 0px;
   position: fixed;
   z-index: -1;
 }
